# U-Hack

./: .gitignore  README.md  overview.md  package-lock.json
.claude/: settings.local.json
analytics/: aggregate.py
apps/api/: debug_tm.html  generate_liga1_analyses.py  pyproject.toml  run.bat
apps/api/database/: ucluj_analysis.json
apps/api/src/dataframe/: baza_date_restul_jucatorilor.csv  fetch_liga1_market_values.py  json_to_csv.py  liga1_market_values.csv  liga1_market_values.json  ucluj_detalii_jucatori.csv
apps/api/src/ttg_api/: __init__.py  candidate_shortlist.py  main.py  scouting_agent.py
apps/api/src/ttg_api/routers/: analytics.py  images.py  players.py  recruitment.py  scraper.py  scraper_web.py
apps/api/src/ttg_api/services/: transfermarkt.py
apps/api/team_analyses/: all_players_except_ucluj.json  arges_analysis.json  botosani_analysis.json  cfr_cluj_analysis.json  csikszereda_miercurea_ciuc_analysis.json  dinamo_bucuresti_analysis.json  farul_constanta_analysis.json  fcs_bucuresti_analysis.json  hermannstadt_analysis.json  metaloglobus_analysis.json  otelul_analysis.json  petrolul_52_analysis.json  rapid_bucuresti_analysis.json  unirea_slobozia_analysis.json  universitatea_craiova_analysis.json  uta_arad_analysis.json
apps/desktop/: .gitignore  README.md  package-lock.json  package.json  run.bat  tsconfig.json
apps/desktop/scripts/: copy-renderer.cjs
apps/desktop/src/: main.ts
apps/desktop/src/api/: client.ts
apps/desktop/src/renderer/: app.js  index.html  styles.css
apps/web-scraper/: main.py
web-scraper/: main.py
(+6 files in other folders)
