[project]
name = "ttg-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "structlog",
    "ddgs",
    "newspaper3k",
    "google-generativeai",
    "langchain",
    "langchain-google-genai",
    "pydantic",
    "hatchling>=1.29.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "lxml_html_clean",
    "playwright>=1.42.0",
    "cloudscraper>=1.2.71",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttg_api"]
